<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="216dp"
        android:layout_marginStart="216dp"
        android:text="@string/_underlines"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="top"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <!-- android:background="@drawable/accent_pill_rect"-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
             >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/etMorse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|start"
                        android:hint="@string/enter_morse_code"
                        android:paddingBottom="24dp"
                        android:paddingEnd="52dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="53dp"
                        android:paddingStart="24dp"
                        android:paddingTop="24dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white_blurry"
                        android:textSize="18sp" />

                </LinearLayout>
            <LinearLayout
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:clickable="true"
                android:gravity="top"
                android:orientation="vertical">

                <!-- android:background="@drawable/semi_transparent_pill_rect"-->
                <TextView
                    android:id="@+id/tvDot"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/_dot"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
                <!--android:background="@drawable/semi_transparent_pill_rect"-->
                <TextView
                    android:id="@+id/tvDash"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:text="@string/_hyphen"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
<!--                android:background="@drawable/semi_transparent_pill_rect"-->
               <ImageView
                    android:id="@+id/tvSpace"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_marginBottom="24dp"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:padding="8dp"
                    android:src="@android:drawable/stat_sys_upload"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />
        <!--   android:background="@drawable/accent_pill_rect"-->
        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_gravity="top"
            android:layout_margin="8dp"
            android:layout_weight="1"

            android:gravity="top|start"
            android:hint="@string/enter_plain_english_text_to_encode"
            android:padding="24dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_blurry"
            android:textSize="18sp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabShareMorse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_send" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center"
        android:orientation="horizontal">
<!--        android:background="@drawable/green_pill"-->
        <!--      android:drawableLeft="@drawable/ic_arrow_downward_white_24dp"-->
        <!--android:drawableStart="@drawable/ic_arrow_downward_white_24dp"-->
        <TextView
            android:id="@+id/tvDecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"


            android:drawablePadding="8dp"

            android:padding="12dp"
            android:text="@string/decode"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    <!--    android:background="@drawable/green_pill"-->
        <TextView
            android:id="@+id/tvEncode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:text="@string/encode"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
   <!-- android:contentDescription="@string/audio_record_controller_microphone"-->
    <ImageView
        android:id="@+id/ivMic"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:src="@android:drawable/stat_sys_speakerphone" />

    <FrameLayout
        android:id="@+id/flRecordingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_light"
        android:clickable="true">

     <!--   <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="64dp"
            android:padding="16dp"

            >-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

              <!--  <bd.mil.army.crs.views.AudioVisualizer
                    android:id="@+id/audioVisualizer"
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:layout_margin="8dp" />-->

                <TextView
                    android:id="@+id/tvStopRecording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:text="@string/stop"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMsgRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:text="Calibrate Noise Level"

                    android:textSize="16sp" />
            </LinearLayout>

<!--
        </android.support.v7.widget.CardView>-->

    </FrameLayout>

</FrameLayout>